force-app/main/default/objects/Project_Resource__c/fields/AssignedHours__c.field-meta.xml
<CustomField>
    <fullName>AssignedHours__c</fullName>
    <label>Assigned Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>