force-app/main/default/objects/Project_Resource__c/fields/Is_Squad_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Squad_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Squad Lead</label>
    <type>Checkbox</type>
</CustomField>