force-app/main/default/objects/Project_Resource__c/fields/Recorded_Cost__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Cost__c</fullName>
    <formula>Resource__r.Rate__c * Recorded_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recorded Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>