force-app/main/default/objects/Project_Resource__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>Resource__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>