force-app/main/default/objects/Project_Resource__c/validationRules/Avoid_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoid_Create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Project__r.Status__c , &quot;In Progress&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t add resources while the project is in progress.</errorMessage>
</ValidationRule>